# st_ner_annotate

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
data/: test.food.cml.json
st_ner_annotate/: __init__.py
st_ner_annotate/frontend/: package.json  rollup.config.js
st_ner_annotate/frontend/src/: StreamlitNERAnnotate.svelte  main.ts
st_ner_annotate/frontend/src/components/: MarkedWord.svelte  Word.svelte
st_ner_annotate/pages/: auto.py  baseline.py
